# mtbs_fire_analysis

./: .clineignore  00_eco_regions_preprocess.py  00_perims_preprocess.py  00_rasters_preprocess.py  00_states_preprocess.py  01_aoi_extract.py  01_nlcd_preprocess.py  02_frequency.py  10ThingsIHateAboutThisProject.md  10_aoi_extract.py  Dockerfile  RupertTodo.md  Summary_Statistics.csv  TODO.md  aoi_extract.py  defaults.py  env.yml  paths.py  plot_dt.py  pyproject.toml  t25.py  table_2.py  utils.py
.devcontainer/: devcontainer.json
CA_Simulation/: CA_helpers.py  fire_spread.py  fire_spread2.py  fire_spread3.py  fuel_grow.py  new_rain.py  run_fire_season.py  run_single_fire.py  run_single_fire2.py  run_single_fire3.py  run_single_fire4.py  sim.py  simple_rain.py
analysis/: CensoringTest.py  Distributions.py  TestFullHLHFit.py  censoring_test.py  distributions.py  hlh_test.py  mining.py  plot_dt.py  test_helpers.py
analysis/Statistical_Tests/: Documentation.txt
docs/: ANALYSIS_PIPELINES.md  ARCHITECTURE.md  DATA_PIPELINE.md  DECISIONS.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/archive/: CLINE_SETUP.md
mtbs_fire_analysis/: defaults.py  geohasher.py  grid_identity.py  raster_read.py  utils.py
mtbs_fire_analysis/analysis/: All_data.py  CheckLeftCensoring.py  DEPRECATEDcensoring_test.py  DEPRECATEDhlh_test.py  TODO.md  TestFullHLHFit.py  TestLifeLines.py  __init__.py  a00_get_histories.py  a10_create_config.py  a20_hlh_fits.py  a21_hlh_bootstraps.py  a30_create_lookup.py  a31_full_statistics.py  a40_create_bp.py  a50_score_bp.py  b00_get_histories.bash  b20_run_fits.bash  b30_create_lookups.bash  b40_create_bps.bash  b50_score_bps.bash  b51_score_ref_bps.bash  c00_compress_bps.bash  c01_copy_rasters.bash  calc_burn_probability.py  configs.yaml  constraints_inspect.py  copy_file.py  default_params.py  defaults.py  distributions.py  dumb_example.py  fit_constraints.py  hlh_dist.py  hlh_test.py  lifetime_base.py  mining.py  plot_dt.py  read_output_pkl.py  registry.py  (+6 more)
mtbs_fire_analysis/analysis/statistical_tests/: Sensoring_HLH_Analysis.html  Sensoring_HLH_Analysis.ipynb  TODO.md  all_sensors.py  all_sensors_repeat.py  all_sensors_repeat_weibull.py  (+9 more)
mtbs_fire_analysis/data/: eco_nlcd_candidates.yaml  eco_nlcd_pixel_counts_2003_1.pqt  eco_nlcd_pixel_counts_2003_2.pqt  eco_nlcd_pixel_counts_2003_3.pqt  eco_nlcd_summary.csv  pixel_counts.csv
mtbs_fire_analysis/pipeline/: 00_eco_regions_preprocess.py  01_wui_preprocess.py  10_aoi_extract.py  20_combine.py  m00_eco_regions_preprocess.py  m00_hex_grid_preprocess.py  m00_mtbs_rasters_preprocess.py  m00_perims_preprocess.py  m00_states_preprocess.py  m00_wui_preprocess.py  m01_elevation_preprocess.py  m01_nlcd_preprocess.py  m01_rasterize_eco_regions.sh  m01_rasterize_perims.sh  m01_wui_preprocess.py  m01b_dem_aggregate_90m.py  m01c_dem_aggregate_270m.py  m02_nlcd_mode.py  m02_rasterize_wui.sh*  m02b_ever_burned_mask.py  m02b_solar_resample_30m.py  m02c_first_burn_year.py  m10_aoi_extract.py  m10_data_extract.py  m10b_per_pixel_per_year_nlcd.py  m11_join_raster_data.py  m20_combine.py  m30_build_st.py  paths.py  pixel_counts.py
old_env/: env.yml
pipeline/: 00_states_preprocess.py  02_rasterize_wui.sh  20_combine.py
scripts/: 00_perims_preprocess.py  00_wui_preprocess.py  01_rasterize_wui.sh  01_wui_preprocess.py  02_rasterize_wui.sh  10_aoi_extract.py  20_count.py  defaults.py  paths.py  plot_dt.py  table_2.py
tests/: test_burnin_heuristic.py  test_constraints_registry.py  test_ig_sampler_mean.py  test_inverse_gauss_rvs_mean.py  test_repeat_mean_vs_naive.py
tools/: plot_distributions.py  plot_weibull_param_bounds.py  print_constraints.py
(+8 files in other folders)
