[project]
name            = "mtbs_fire_analysis"
version         = "0.0.1"
requires-python = "==3.12.*"

dependencies = [
  "affine",
  "cfgrib",
  "dask",
  "dask-geopandas",
  "dask-image",
  "fiona",
  "geopandas",
  "ipython",
  "ipykernel",
  "matplotlib",
  "netcdf4",
  "numba",
  "numpy",
  "odc-geo",
  "pandas",
  "polars",
  "pre-commit",
  "pyarrow",
  "pynvim",
  "pyogrio",
  "pyproj",
  "rasterio",
  "rioxarray",
  "ruff",
  "scipy",
  "seaborn",
  "shapely>=2",
  "tqdm",
  "xarray",
]


[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # Pycodestyle
    "W",      # Pycodestyle
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "ISC",    # flake8-implicit-str-concat
    "T20",    # flake8-print
    "F",      # Pyflakes
    "I",      # isort
    "NPY",    # numpy rules
    "PD",     # pandas-vet
    "ASYNC",  # flake8-async
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "Q",      # flake8-quotes
    "C4",     # flake8-comprehensions
    "PERF",   # perflint
    "NPY201", # Numpy 2.0
]
extend-select = ["I"]
ignore = [
    # Whitespace before ':'. flake8 is wrong when inside slice expressions.
    "E203",
]
[tool.ruff.lint.isort]
known-first-party = ["analysis", "pipeline"]

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["analysis", "pipeline"]
